// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/superproj/onex.
//

syntax = "proto3";

package gateway.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "apps/v1beta1/generated.proto";

option go_package = "github.com/superproj/onex/pkg/api/gateway/v1;v1";

// Peer lists  hubble peers and notifies of changes.
service Gateway {
  // CreateModelCompare
  rpc CreateModelCompare(github.com.superproj.onex.pkg.apis.apps.v1beta1.ModelCompare) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/modelcompares",
      body: "*",
    };
  }

  // ListModelCompare
  rpc ListModelCompare(ListModelCompareRequest) returns (ListModelCompareResponse) {
    option (google.api.http) = {get: "/v1/modelcompares"};
  }

  // GetModelCompare
  rpc GetModelCompare(GetModelCompareRequest) returns (github.com.superproj.onex.pkg.apis.apps.v1beta1.ModelCompare) {
    option (google.api.http) = {get: "/v1/modelcompares/{name}"};
  }

  // UpdateModelCompare
  rpc UpdateModelCompare(github.com.superproj.onex.pkg.apis.apps.v1beta1.ModelCompare) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/modelcompares",
      body: "*",
    };
  }

  // DeleteModelCompare
  rpc DeleteModelCompare(DeleteModelCompareRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/modelcompares/{name}"};
  }
}


message ModelCompare {
  int64 compareID = 1;
  string compareName = 2;
  int64 sceneID = 3;
  string creator = 4;
  string sampleID = 5;
  repeated string modelIDs = 6;
  string status = 7;
  google.protobuf.Timestamp startedAt= 8;
  google.protobuf.Timestamp endedAt = 9;
  google.protobuf.Timestamp createTime= 10;
  google.protobuf.Timestamp updateTime= 11;
}

message ListModelCompareRequest {
  int64 limit = 1;         
  int64 offset = 2;
}                  
 
message ListModelCompareResponse {
  int64 totalCount = 1; 
  repeated ModelCompare compares = 2;
}

message GetModelCompareRequest {
  string name = 1;
}                  

message UpdateModelCompareRequest {
  string name = 1;
  optional string sampleID = 2;
}

message DeleteModelCompareRequest {
  string name = 1;
}                  
